# linux2JB

./: CMakeLists.txt  README.txt  fetchStockData.sh  main.cpp  run.sh
include/: main.h
other/: newMain.c
src/: Mission.cpp  stockData.cpp
